WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300518
[JSC] WASM IPInt SIMD: do not try to access jsCallingConvention() when signature has v128
https://bugs.webkit.org/show_bug.cgi?id=300518
Summary
[JSC] WASM IPInt SIMD: do not try to access jsCallingConvention() when signat...
Dan Hecht
Reported
2025-10-10 11:47:51 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-10 11:47:59 PDT
<
rdar://problem/162383774
>
Dan Hecht
Comment 2
2025-10-10 11:50:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52132
EWS
Comment 3
2025-10-13 09:04:58 PDT
Committed
301412@main
(4a5038a793e3): <
https://commits.webkit.org/301412@main
> Reviewed commits have been landed. Closing PR #52132 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug