[JSC] WASM IPInt SIMD: do not try to access jsCallingConvention() when signature has v128 https://bugs.webkit.org/show_bug.cgi?id=300518 rdar://162383774

Reviewed by Yusuke Suzuki.

We should check for v128 in the signature before accessing jsCallingConvention()
since imports aren't allowed to have v128 (and JSCallingConvention
RELEASE_ASSERTs that).

Testing: found by v8/simd-errors.js when running JIT-less Wasm SIMD

* Source/JavaScriptCore/wasm/WasmOperations.cpp:
(JSC::Wasm::JSC_DEFINE_JIT_OPERATION):

Canonical link: https://commits.webkit.org/301412@main